<resources>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="textinput_strings_personalization_guide">Personalization guide</string>
    <string name="textinput_strings_phone_no_pause">Pause</string>
    <string name="textinput_strings_phone_no_wait">Wait</string>
    <string name="textinput_strings_settings_about_backup_and_sync_about_section">About</string>
    <string name="textinput_strings_settings_about_backup_and_sync_account">Account</string>
    <string name="textinput_strings_settings_about_backup_and_sync_personal_data">Personal data</string>
    <string name="textinput_strings_settings_about_backup_and_sync_synced_devices_section">Synced devices</string>
    <string name="textinput_strings_settings_auto_dictionary_update">Auto-update dictionaries</string>
    <string name="textinput_strings_settings_auto_space">Automatic space</string>
    <string name="textinput_strings_settings_auto_space_summary">Add space automatically when a word suggestion is selected</string>
    <string name="textinput_strings_settings_backup_and_synchronization">Backup and sync</string>
    <string name="textinput_strings_settings_backup_and_synchronization_about">About backup and sync</string>
    <string name="textinput_strings_settings_backup_and_synchronization_section">Backup and synchronization</string>
    <string name="textinput_strings_settings_clear_language_data">Clear language data</string>
    <string name="textinput_strings_settings_clear_language_data_summary">Clear all personal language data</string>
    <string name="textinput_strings_settings_enable_key_preview">Popup on keypress</string>
    <string name="textinput_strings_settings_feedback">Keypress feedback</string>
    <string name="textinput_strings_settings_keyboard_height">Keyboard height</string>
    <string name="textinput_strings_settings_keyboard_section">Keyboard</string>
    <string name="textinput_strings_settings_keyboard_skin">Keyboard skins</string>
    <string name="textinput_strings_settings_keyboard_symbols_and_smileys">Symbols and smileys</string>
    <string name="textinput_strings_settings_language">Writing languages</string>
    <string name="textinput_strings_settings_language_summary">Select languages and language settings</string>
    <string name="textinput_strings_settings_languages_and_writing_section">Languages and writing</string>
    <string name="textinput_strings_settings_my_words">My words</string>
    <string name="textinput_strings_settings_my_words_section">My words</string>
    <string name="textinput_strings_settings_my_words_summary">View and edit words learned automatically</string>
    <string name="textinput_strings_settings_one_handed_keyboard">One-handed keyboard</string>
    <string name="textinput_strings_settings_personalization">Use my writing style</string>
    <string name="textinput_strings_settings_personalization_and_sync_summary">Learn and back up my writing style</string>
    <string name="textinput_strings_settings_personalization_personalize_gmail_subtitle">Sign in to learn from Gmail™</string>
    <string name="textinput_strings_settings_personalization_personalize_gmail_title">Learn from Gmail™</string>
    <string name="textinput_strings_settings_personalization_personalize_sms_subtitle">Learn from your sent messages</string>
    <string name="textinput_strings_settings_personalization_personalize_sms_title">Learn from Messaging</string>
    <string name="textinput_strings_settings_portrait_keyboard">Portrait keyboard</string>
    <string name="textinput_strings_settings_quick_period">Quick period</string>
    <string name="textinput_strings_settings_quick_period_summary">Tap space bar twice for period followed by space</string>
    <string name="textinput_strings_settings_show_numeric_keys">Numeric keys</string>
    <string name="textinput_strings_settings_show_period_and_comma">Period and comma keys</string>
    <string name="textinput_strings_settings_show_secondary_prints">Symbols on long press</string>
    <string name="textinput_strings_settings_show_secondary_prints_summary">Enter symbols, for example punctuation or @, by holding down letter keys.</string>
    <string name="textinput_strings_settings_show_smiley">Smiley key</string>
    <string name="textinput_strings_settings_smart_language_detection">Smart language detection</string>
    <string name="textinput_strings_settings_smart_language_detection_on_summary">The keyboard will detect which language you are using and give word suggestions accordingly.</string>
    <string name="textinput_strings_settings_sound_feedback">Sound on keypress</string>
    <string name="textinput_strings_settings_sound_feedback_volume">Sound volume</string>
    <string name="textinput_strings_settings_sound_section">Sound</string>
    <string name="textinput_strings_settings_tactile_feedback">Vibration on keypress</string>
    <string name="textinput_strings_settings_tactile_feedback_intensity">Vibration intensity</string>
    <string name="textinput_strings_settings_trace_input">Gesture input</string>
    <string name="textinput_strings_settings_trace_input_summary">Write by sliding your finger from letter to letter, lifting it only between words</string>
    <string name="textinput_strings_settings_vibration_section">Vibration</string>
    <string name="textinput_strings_settings_visual_section">Visual</string>
    <string name="textinput_strings_settings_voice_input_start_from_keyboard">Google™ voice typing key</string>
    <string name="textinput_strings_settings_voice_input_start_from_keyboard_summary">Access voice input from the keyboard</string>
    <string name="textinput_strings_settings_word_suggestion">Word suggestions</string>
    <string name="textinput_stringssettings_personalization_section">Learn my writing style</string>
    <string name="abc_key_arabic">أ‌ب</string>
    <string name="abc_key_cyrillic">Абв</string>
    <string name="abc_key_hindi">हिंदी</string>
    <string name="abc_key_punjabi">ਪੰਜਾਬੀ</string>
    <string name="abc_key_thai">กขค</string>
    <string name="auto_dictionary_update_default">@string/auto_dictionary_update_off</string>
    <string name="key_auto_dictionary_update">auto_dictionary_update</string>
    <string name="key_backup_and_sync">backup_and_sync</string>
    <string name="key_backup_and_sync_about">backup_and_sync_about</string>
    <string name="key_backup_and_sync_about_account">backup_and_sync_about_account</string>
    <string name="key_backup_and_sync_about_personal_data">backup_and_sync_about_personal_data</string>
    <string name="key_backup_and_sync_about_screen">backup_and_sync_about_screen</string>
    <string name="key_backup_and_sync_about_synced_devices">backup_and_sync_about_synced_devices</string>
    <string name="key_backup_and_sync_category">backup_and_sync_category</string>
    <string name="key_candidate_selection_auto_space">candidate_selection_auto_space</string>
    <string name="key_clear_language_data">clear_language_data</string>
    <string name="key_feedback_screen">feedback_preference_screen</string>
    <string name="key_key_preview">key_preview</string>
    <string name="key_learn_my_writing_style_screen">learn_my_writing_style_screen</string>
    <string name="key_my_words">my_words</string>
    <string name="key_my_words_category">my_words_category</string>
    <string name="key_one_handed_keyboard">one_handed_keyboard</string>
    <string name="key_personalization_guide_screen">personalization_guide_preference_screen</string>
    <string name="key_personalize_gmail">personalize_gmail</string>
    <string name="key_personalize_sms">personalize_sms</string>
    <string name="key_personalizer_category">key_personalizer_category</string>
    <string name="key_personalizer_category_visual_feedback">key_personalizer_category_visual_feedback</string>
    <string name="key_personalizer_screen">personalizer_screen</string>
    <string name="key_portrait_keyboard">portrait_keyboard</string>
    <string name="key_prediction">sw_keyboard_prediction</string>
    <string name="key_prediction_auto_replace">prediction_auto_replace</string>
    <string name="key_show_numeric_keys">numeric_keys_enabled</string>
    <string name="key_show_period_and_comma_keys">show_period_and_comma_keys</string>
    <string name="key_show_secondary_prints">key_show_secondary_prints</string>
    <string name="key_show_smiley_key">show_smiley_key</string>
    <string name="key_show_voice_input_key">voice_input_start_from_keyboard</string>
    <string name="key_smart_language_detection">smart_language_detection</string>
    <string name="key_sound_feedback">sound_feedback</string>
    <string name="key_sound_feedback_volume">sound_feedback_volume</string>
    <string name="key_tactile_feedback">tactile_feedback</string>
    <string name="key_textinput_debug">textinput_debug</string>
    <string name="key_textinput_feedback">textinput_feedback</string>
    <string name="key_textinput_keyboard_appearance">textinput_keyboard_appearance</string>
    <string name="key_textinput_send_feedback_preference">key_send_feedback_preference</string>
    <string name="key_textinput_settings">textinput_settings</string>
    <string name="key_trace">sw_keyboard_trace</string>
    <string name="key_vibrator_duration">vibrator_duration</string>
    <string name="layout_fullkeyboard">full-keyboard</string>
    <string name="row1_10keys">id_row1_10keys</string>
    <string name="row1_abc">id_row1_abc</string>
    <string name="row1_phone_4keys">id_row1_phone_4keys</string>
    <string name="row2_10keys">id_row2_10keys</string>
    <string name="row2_abc">id_row2_abc</string>
    <string name="row2_phone_4keys_symbols">id_row2_phone_4keys_symbols</string>
    <string name="row3_6keys_symbols">id_row3_6keys_symbols</string>
    <string name="row3_abc">id_row3_abc</string>
    <string name="row3_phone_3keys_symbols">id_row3_phone_3keys_symbols</string>
    <string name="row_1keys">id_row_1key</string>
    <string name="row_2keys">id_row_2keys</string>
    <string name="row_4keys">id_row_4keys</string>
    <string name="row_5keys">id_row_5keys</string>
    <string name="row_6keys">id_row_6keys</string>
    <string name="row_7keys">id_row_7keys</string>
    <string name="row_8keys">id_row_8keys</string>
    <string name="row_bottom">id_row_bottom</string>
    <string name="row_bottom_abc">id_row_bottom_abc</string>
    <string name="row_bottom_phone_2keys">id_row_bottom_phone_2keys</string>
    <string name="switch_symbols_page">1 | 2</string>
    <string name="textinput_strings_send_feedback">Send feedback</string>
</resources>