<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:semc="http://schemas.android.com/apk/res-auto">
    <Row semc:layoutId="@string/row1_abc">
        <Key semc:candidates="+" />
        <Key semc:candidates="1" />
        <Key semc:candidates="2" />
        <Key semc:candidates="3" />
        <Key semc:candidates="." />
    </Row>
    <Row semc:layoutId="@string/row2_abc">
        <Key semc:candidates="4" />
        <Key semc:candidates="5" />
        <Key semc:candidates="6" />
        <Key semc:candidates="," />
    </Row>
    <Row semc:layoutId="@string/row3_abc">
        <Key semc:candidates="7" />
        <Key semc:candidates="8" />
        <Key semc:candidates="9" />
    </Row>
    <Row semc:layoutId="@string/row_bottom_abc" />
    <OverrideKey semc:metaKey="space" semc:candidates="0" />
    <OverrideKey semc:metaKey="symbols" semc:label="@string/abc_key_cyrillic" />
</Keyboard>