<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:semc="http://schemas.android.com/apk/res-auto">
    <Row semc:layoutId="@string/row1_abc">
        <Key semc:candidates="+" />
        <Key semc:candidates="١" />
        <Key semc:candidates="٢" />
        <Key semc:candidates="٣" />
        <Key semc:candidates="." />
    </Row>
    <Row semc:layoutId="@string/row2_abc">
        <Key semc:candidates="٤" />
        <Key semc:candidates="٥" />
        <Key semc:candidates="٦" />
        <Key semc:candidates="," />
    </Row>
    <Row semc:layoutId="@string/row3_abc">
        <Key semc:candidates="٧" />
        <Key semc:candidates="٨" />
        <Key semc:candidates="٩" />
    </Row>
    <Row semc:layoutId="@string/row_bottom_abc" />
    <OverrideKey semc:metaKey="switchSymbols" semc:label="١٢|12" />
    <OverrideKey semc:metaKey="symbols" semc:label="@string/abc_key_arabic" />
    <OverrideKey semc:metaKey="space" semc:candidates="٠" />
</Keyboard>