<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:semc="http://schemas.android.com/apk/res-auto">
    <Row semc:layoutId="@string/row1_abc">
        <Key semc:candidates="+" />
        <Key semc:candidates="۱" />
        <Key semc:candidates="۲" />
        <Key semc:candidates="۳" />
        <Key semc:candidates="." />
    </Row>
    <Row semc:layoutId="@string/row2_abc">
        <Key semc:candidates="۴" />
        <Key semc:candidates="۵" />
        <Key semc:candidates="۶" />
        <Key semc:candidates="," />
    </Row>
    <Row semc:layoutId="@string/row3_abc">
        <Key semc:candidates="۷" />
        <Key semc:candidates="۸" />
        <Key semc:candidates="۹" />
    </Row>
    <Row semc:layoutId="@string/row_bottom_abc" />
    <OverrideKey semc:metaKey="switchSymbols" semc:label="١٢|12" />
    <OverrideKey semc:metaKey="symbols" semc:label="@string/abc_key_arabic" />
    <OverrideKey semc:metaKey="space" semc:candidates="۰" />
</Keyboard>