<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:semc="http://schemas.android.com/apk/res-auto">
    <Row semc:layoutId="@string/row1_abc">
        <Key semc:candidates="+" />
        <Key semc:candidates="๑" />
        <Key semc:candidates="๒" />
        <Key semc:candidates="๓" />
        <Key semc:candidates="." />
    </Row>
    <Row semc:layoutId="@string/row2_abc">
        <Key semc:candidates="๔" />
        <Key semc:candidates="๕" />
        <Key semc:candidates="๖" />
        <Key semc:candidates="," />
    </Row>
    <Row semc:layoutId="@string/row3_abc">
        <Key semc:candidates="๗" />
        <Key semc:candidates="๘" />
        <Key semc:candidates="๙" />
    </Row>
    <Row semc:layoutId="@string/row_bottom_abc" />
    <OverrideKey semc:metaKey="space" semc:candidates="๐" />
    <OverrideKey semc:disabled="false" semc:metaKey="switchSymbols" semc:label="๑๒|12" />
    <OverrideKey semc:metaKey="symbols" semc:label="@string/abc_key_thai" />
</Keyboard>