<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:semc="http://schemas.android.com/apk/res-auto">
    <Row semc:layoutId="@string/row1_abc">
        <Key semc:candidates="+" />
        <Key semc:candidates="੧" />
        <Key semc:candidates="੨" />
        <Key semc:candidates="੩" />
        <Key semc:candidates="." />
    </Row>
    <Row semc:layoutId="@string/row2_abc">
        <Key semc:candidates="੪" />
        <Key semc:candidates="੫" />
        <Key semc:candidates="੬" />
        <Key semc:candidates="," />
    </Row>
    <Row semc:layoutId="@string/row3_abc">
        <Key semc:candidates="੭" />
        <Key semc:candidates="੮" />
        <Key semc:candidates="੯" />
    </Row>
    <Row semc:layoutId="@string/row_bottom_abc" />
    <OverrideKey semc:disabled="false" semc:metaKey="switchSymbols" semc:label="੧੨|12" />
    <OverrideKey semc:metaKey="symbols" semc:label="@string/abc_key_punjabi" />
    <OverrideKey semc:metaKey="space" semc:candidates="੦ⁿ∅°" />
</Keyboard>