<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:semc="http://schemas.android.com/apk/res-auto">
    <Row semc:layoutId="@string/row1_10keys">
        <Key semc:candidates="1१" />
        <Key semc:candidates="2२" />
        <Key semc:candidates="3३" />
        <Key semc:candidates="4४" />
        <Key semc:candidates="5५" />
        <Key semc:candidates="6६" />
        <Key semc:candidates="7७" />
        <Key semc:candidates="8८" />
        <Key semc:candidates="9९" />
        <Key semc:candidates="0०ⁿ∅°" />
    </Row>
    <Row semc:layoutId="@string/row2_10keys">
        <Key semc:candidates="\@©®™" />
        <Key semc:candidates=":" />
        <Key semc:candidates=";" />
        <Key semc:candidates="_" />
        <Key semc:candidates="-=–—" />
        <Key semc:candidates="\#" />
        <Key semc:candidates="(" />
        <Key semc:candidates=")" />
        <Key semc:candidates="/÷" />
        <Key semc:candidates="+±" />
    </Row>
    <Row semc:layoutId="@string/row3_6keys_symbols">
        <Key semc:candidates="।" />
        <Key semc:candidates="," />
        <Key semc:candidates="\?¿" />
        <Key semc:candidates="!¡" />
        <Key semc:candidates="." />
        <Key semc:candidates="&quot;'“”«»˝`´" />
    </Row>
    <Row semc:layoutId="@string/row_bottom" />
    <OverrideKey semc:metaKey="switchSymbols" semc:label="@string/switch_symbols_page" />
    <OverrideKey semc:metaKey="symbols" semc:label="@string/abc_key_hindi" />
</Keyboard>